--- a/java/res/values/dimens.xml
+++ b/java/res/values/dimens.xml
@@ -100,22 +100,22 @@
     <integer name="suggestions_count_in_strip">3</integer>
     <fraction name="center_suggestion_percentile">36%</fraction>
 
-    <!-- Gesture preview trail parameters -->
-    <!-- Minimum distance between gesture preview trail sampling points. -->
-    <dimen name="gesture_preview_trail_min_sampling_distance">6.4dp</dimen>
-    <!-- Maximum angular threshold between gesture preview trails interpolation segments in degree. -->
-    <integer name="gesture_preview_trail_max_interpolation_angular_threshold">15</integer>
-    <!-- Maximum distance threshold between gesture preview trails interpolation segments. -->
-    <dimen name="gesture_preview_trail_max_interpolation_distance_threshold">16.0dp</dimen>
-    <!-- Maximum number of gesture preview trail interpolation segments. -->
-    <integer name="gesture_preview_trail_max_interpolation_segments">6</integer>
-    <dimen name="gesture_preview_trail_start_width">10.0dp</dimen>
-    <dimen name="gesture_preview_trail_end_width">2.5dp</dimen>
+    <!-- Gesture trail parameters -->
+    <!-- Minimum distance between gesture trail sampling points. -->
+    <dimen name="gesture_trail_min_sampling_distance">6.4dp</dimen>
+    <!-- Maximum angular threshold between gesture trails interpolation segments in degree. -->
+    <integer name="gesture_trail_max_interpolation_angular_threshold">15</integer>
+    <!-- Maximum distance threshold between gesture trails interpolation segments. -->
+    <dimen name="gesture_trail_max_interpolation_distance_threshold">16.0dp</dimen>
+    <!-- Maximum number of gesture trail interpolation segments. -->
+    <integer name="gesture_trail_max_interpolation_segments">6</integer>
+    <dimen name="gesture_trail_start_width">10.0dp</dimen>
+    <dimen name="gesture_trail_end_width">2.5dp</dimen>
     <!-- Percentages of gesture preview taril body and shadow, in proportion to the trail width.
          A negative value of the shadow ratio disables drawing shadow. -->
     <!-- TODO: May use the shadow to alleviate rugged trail drawing. -->
-    <integer name="gesture_preview_trail_body_ratio">100</integer>
-    <integer name="gesture_preview_trail_shadow_ratio">-1</integer>
+    <integer name="gesture_trail_body_ratio">100</integer>
+    <integer name="gesture_trail_shadow_ratio">-1</integer>
     <!-- Gesture floating preview text parameters -->
     <dimen name="gesture_floating_preview_text_size">24dp</dimen>
     <dimen name="gesture_floating_preview_text_offset">73dp</dimen>
