--- a/java/res/layout/setup_welcome_title.xml
+++ b/java/res/layout/setup_welcome_title.xml
@@ -27,6 +27,6 @@
     <TextView
         android:id="@+id/setup_welcome_description"
         android:text="@string/setup_welcome_additional_description"
-        android:layout_marginTop="12dp"
+        android:layout_marginTop="@dimen/setup_welcome_description_top_margin"
         style="@style/setupWelcomeDescritpionStyle" />
 </merge>
