Use system default vibration pattern
Bug: 9468462
Change-Id: Ifa46a56873c10888da8eaa2782fe07ef138a141b

--- a/java/res/values/keypress-vibration-durations.xml
+++ b/java/res/values/keypress-vibration-durations.xml
@@ -56,7 +56,7 @@
         <item>MODEL=XT907:MANUFACTURER=motorola,30</item>
         <!-- Sony Xperia Z -->
         <item>MODEL=C6603:MANUFACTURER=Sony,35</item>
-        <!-- Default value for unknown device -->
-        <item>,20</item>
+        <!-- Default value for unknown device. The negative value means system default. -->
+        <item>,-1</item>
     </string-array>
 </resources>
