Add missing letter THEH to Arabic keyboard layout
With this change, the tablet keyboard layout both 7inch and 10inch use
quite similar one of the ordinal PC.  The differences from the ordinal
PC keyboard layout are:

- Move letter THAL from the most left of digits' row to the most left
  of 3rd row.
- Move letter DAL from the most right of 1st row to the most right of
  3rd row.
- Omit ligature LAM with ALEF from 3rd row and move to more keys of
  letter LAM on 2nd row.

The phone keyboard layout is the same one of the tablet except:

- Omit letter YEH with HAMZA avobe from 3rd row and move to more keys
  of letter ALEF MAKSURA on 3rd row.

Bug: 9371393
Change-Id: I1cd164ce7c1c3a5cae67b9985f1b167aef028ca0

--- a/java/res/xml-sw600dp/keys_arabic3_left.xml
+++ b/java/res/xml-sw600dp/keys_arabic3_left.xml
@@ -2,7 +2,7 @@
 <!--
 /*
 **
-** Copyright 2011, The Android Open Source Project
+** Copyright 2013, The Android Open Source Project
 **
 ** Licensed under the Apache License, Version 2.0 (the "License");
 ** you may not use this file except in compliance with the License.
@@ -21,29 +21,12 @@
 <merge
     xmlns:latin="http://schemas.android.com/apk/res/com.android.inputmethod.latin"
 >
-    <include
-        latin:keyboardLayout="@xml/key_styles_common" />
-    <Row
-        latin:keyWidth="9.091%p"
-    >
-        <include
-            latin:keyboardLayout="@xml/rowkeys_arabic1" />
-    </Row>
-    <Row
-        latin:keyWidth="9.091%p"
-    >
-        <include
-            latin:keyboardLayout="@xml/rowkeys_arabic2" />
-    </Row>
-    <Row
-        latin:keyWidth="9.091%p"
-    >
-        <include
-            latin:keyboardLayout="@xml/rowkeys_arabic3" />
-        <Key
-            latin:keyStyle="deleteKeyStyle"
-            latin:keyWidth="fillRight" />
-    </Row>
-    <include
-        latin:keyboardLayout="@xml/row_qwerty4" />
+    <!-- U+0630: "ذ" ARABIC LETTER THAL -->
+    <Key
+        latin:keyLabel="&#x0630;"
+        latin:keyLabelFlags="fontNormal" />
+    <!-- U+0626: "ئ" ARABIC LETTER YEH WITH HAMZA ABOVE -->
+    <Key
+        latin:keyLabel="&#x0626;"
+        latin:keyLabelFlags="fontNormal" />
 </merge>
