Add missing letter THEH to Perisan keyboard layout
With this change, the phone keyboard layout use quite similar one of
the oridinal PC.  The differences from the ordinal PC keyboard layout
are:

- Add letter JEH between letter TAH and ZAIN at 3rd row.
- Move letter TCHEN from the most left of 1st row to the most left of
  3rd row.

The tablet keyboard layout is the same of of the phone except:

- Add letter ALEF with MADDA above between letter WAW and letter TCHEN
  at 3rd row.

This change also moves the delete key and the enter key on tablet to
1st and 2nd row respectively.

Bug: 9371393
Change-Id: I964589055eb15549fe20e5ec45e02f7dc6b5686e

--- a/java/res/xml/rowkeys_farsi2.xml
+++ b/java/res/xml/rowkeys_farsi2.xml
@@ -25,11 +25,9 @@
     <Key
         latin:keyLabel="&#x0634;"
         latin:keyLabelFlags="fontNormal" />
-    <!-- U+0633: "س" ARABIC LETTER SEEN
-         U+0636: "ض" ARABIC LETTER DAD -->
+    <!-- U+0633: "س" ARABIC LETTER SEEN -->
     <Key
         latin:keyLabel="&#x0633;"
-        latin:moreKeys="&#x0636;"
         latin:keyLabelFlags="fontNormal" />
     <!-- U+06CC: "ی" ARABIC LETTER FARSI YEH
          U+0626: "ئ" ARABIC LETTER YEH WITH HAMZA ABOVE
@@ -59,11 +57,10 @@
         latin:moreKeys="&#x0621;,&#x0622;,&#x0623;,&#x0671;,&#x0625;"
         latin:keyLabelFlags="fontNormal" />
     <!-- U+062A: "ت" ARABIC LETTER TEH
-         U+062B: "ﺙ" ARABIC LETTER THEH
          U+0629: "ة": ARABIC LETTER TEH MARBUTA -->
     <Key
         latin:keyLabel="&#x062A;"
-        latin:moreKeys="&#x062B;,&#x0629;"
+        latin:moreKeys="&#x0629;"
         latin:keyLabelFlags="fontNormal" />
     <!-- U+0646: "ن" ARABIC LETTER NOON -->
     <Key
@@ -78,5 +75,9 @@
     <Key
         latin:keyLabel="&#x06A9;"
         latin:moreKeys="&#x0643;"
+        latin:keyLabelFlags="fontNormal" />
+    <!-- U+06AF: "گ" ARABIC LETTER GAF -->
+    <Key
+        latin:keyLabel="&#x06AF;"
         latin:keyLabelFlags="fontNormal" />
 </merge>
