--- a/java/res/xml/prefs.xml
+++ b/java/res/xml/prefs.xml
@@ -161,7 +161,7 @@
                 android:persistent="true"
                 android:defaultValue="true" />
             <PreferenceScreen
-                android:fragment="com.android.inputmethod.latin.AdditionalSubtypeSettings"
+                android:fragment="com.android.inputmethod.latin.settings.AdditionalSubtypeSettings"
                 android:key="custom_input_styles"
                 android:title="@string/custom_input_styles_title" />
             <ListPreference
