--- a/java/res/values-mr/strings-emoji-descriptions.xml
+++ b/java/res/values-mr/strings-emoji-descriptions.xml
@@ -263,7 +263,7 @@
     <string name="spoken_emoji_1F235" msgid="5320186982841793711">"चौरसातील कल्पनाचित्र पूर्ण ताबा"</string>
     <string name="spoken_emoji_1F236" msgid="879755752069393034">"चौरसातील कल्पनाचित्र सशुल्क"</string>
     <string name="spoken_emoji_1F237" msgid="6741807001205851437">"चौरसातील कल्पनाचित्र मासिक"</string>
-    <string name="spoken_emoji_1F238" msgid="5504414186438196912">"चौरसातील कल्पनाचित्र अनुप्रयोग"</string>
+    <string name="spoken_emoji_1F238" msgid="5504414186438196912">"चौरसातील कल्पनाचित्र अॅप्लिकेशन"</string>
     <string name="spoken_emoji_1F239" msgid="1634067311597618959">"चौरसातील कल्पनाचित्र सवलत"</string>
     <string name="spoken_emoji_1F23A" msgid="3107862957630169536">"चौरसातील व्यवसायातील कल्पनाचित्र"</string>
     <string name="spoken_emoji_1F250" msgid="6586943922806727907">"वर्तुळाकृती कल्पनाचित्र फायदा"</string>
