Import translations. DO NOT MERGE
Change-Id: I6a29dc635692646a355fd1c80e6b1514fbec41c8
Auto-generated-cl: translation import
Exempt-From-Owner-Approval: translation import

--- a/java/res/values-ne/strings-emoji-descriptions.xml
+++ b/java/res/values-ne/strings-emoji-descriptions.xml
@@ -374,7 +374,7 @@
     <string name="spoken_emoji_1F35B" msgid="62530406745717835">"करी र भात"</string>
     <string name="spoken_emoji_1F35C" msgid="7537756539198945509">"उमालेको कचौरा"</string>
     <string name="spoken_emoji_1F35D" msgid="8173523083861875196">"स्पैगेट्टी"</string>
-    <string name="spoken_emoji_1F35E" msgid="2935428307894662571">"रोटी"</string>
+    <string name="spoken_emoji_1F35E" msgid="2935428307894662571">"पाउरोटी"</string>
     <string name="spoken_emoji_1F35F" msgid="4840297386785728443">"फ्रान्सेली फ्राइज"</string>
     <string name="spoken_emoji_1F360" msgid="4094659855684686801">"रोस्ट गरेको मिठो आलु"</string>
     <string name="spoken_emoji_1F361" msgid="6475486395784096109">"जापानी मिठाई"</string>
