--- a/java/res/values-pa/strings-emoji-descriptions.xml
+++ b/java/res/values-pa/strings-emoji-descriptions.xml
@@ -945,8 +945,7 @@
     <skip />
     <!-- no translation found for spoken_emoji_1F577 (1745605672232546738) -->
     <skip />
-    <!-- no translation found for spoken_emoji_1F578 (5843261607004481128) -->
-    <skip />
+    <string name="spoken_emoji_1F578" msgid="5843261607004481128">"Spider Web"</string>
     <!-- no translation found for spoken_emoji_1F579 (356353388497335187) -->
     <skip />
     <!-- no translation found for spoken_emoji_1F587 (1529578701645787678) -->
