--- a/java/res/values-mr/strings-talkback-descriptions.xml
+++ b/java/res/values-mr/strings-talkback-descriptions.xml
@@ -71,7 +71,7 @@
     <string name="spoken_descrption_emoji_category_nature" msgid="5018340512472354640">"निसर्ग"</string>
     <string name="spoken_descrption_emoji_category_places" msgid="1163315840948545317">"ठिकाणे"</string>
     <string name="spoken_descrption_emoji_category_symbols" msgid="474680659024880601">"चिन्हे"</string>
-    <string name="spoken_descrption_emoji_category_flags" msgid="5971573825866381472">"ध्वजांकित करा"</string>
+    <string name="spoken_descrption_emoji_category_flags" msgid="5971573825866381472">"झेंडे"</string>
     <string name="spoken_descrption_emoji_category_eight_smiley_people" msgid="5682663819532433464">"हसरा आणि लोक"</string>
     <string name="spoken_descrption_emoji_category_eight_animals_nature" msgid="5844950234883716704">"प्राणी आणि निसर्ग"</string>
     <string name="spoken_descrption_emoji_category_eight_food_drink" msgid="6196944764485349650">"भोजन आणि पेय"</string>
