--- a/java/res/values-te/strings-action-keys.xml
+++ b/java/res/values-te/strings-action-keys.xml
@@ -25,7 +25,7 @@
     <string name="label_previous_key" msgid="1421141755779895275">"మునుపటి"</string>
     <string name="label_done_key" msgid="7564866296502630852">"పూర్తి"</string>
     <string name="label_send_key" msgid="482252074224462163">"పంపు"</string>
-    <string name="label_search_key" msgid="7965186050435796642">"శోధించు"</string>
+    <string name="label_search_key" msgid="7965186050435796642">"వెతుకు"</string>
     <string name="label_pause_key" msgid="2225922926459730642">"పాజ్ చేయి"</string>
     <string name="label_wait_key" msgid="5891247853595466039">"వేచి ఉ."</string>
 </resources>
